--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <p><img src="Bancolombia_S.A._logo.svg.png" alt="Bancolombia" width="70"> Ahorros: 316-577892-19</p>
             </div>
             <div class="column">
-                <p><img src="QR.jpg" alt="QR" width="80"></p>
+                <p><img src="qr.jpg" alt="QR" width="80"></p>
                 <p><strong>CF - Depósito electrónico:</strong> No. 1700-1862-8915</p>
                 <p><strong>Titular:</strong> Claudia Alejandra Gutiérrez Restrepo</p>
                 <p><strong>C.C:</strong> 43664842</p>
