--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             text-align: left;
             font-size: 18px;
             line-height: 1.6;
-            border-top: 2px solid #28a745;
+            border-top: 2px solid #7fc2e9;
             padding-top: 15px;
             margin-top: 15px;
         }
