--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
             <div class="column">
                 <p><img src="qr.jpg" alt="qr" width="80"></p>
-                <p><strong>CF - Depósito electrónico:</strong> No. 1700-1862-8915</p>
+                <p><strong>BOLD CF - Depósito electrónico:</strong> No. 1700-1862-8915</p>
                 <p><strong>Titular:</strong> Claudia Alejandra Gutiérrez Restrepo</p>
                 <p><strong>C.C:</strong> 43664842</p>
                 <p><strong>WhatsApp:</strong> 321 218 5787</p>
