--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                 <p><strong>BOLD CF-Depósito electrónico:</strong> No. 1700-1862-8915</p>
                 <p><strong>Titular:</strong> Claudia Alejandra Gutiérrez Restrepo</p>
                 <p><strong>C.C:</strong> 43664842</p>
-                <p><strong>WhatsApp:</strong> 321 218 5787</p>
             </div>
+            <center> <p><strong>En caso de requerir un servicio, información o asesoría, por favor comunicarse a la línea de WhatsApp: 321 218 5787</strong></p></center>
         </div>
 
         <button onclick="imprimirCuenta()">Imprimir</button>
