--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
     <div class="preview" id="preview">
         <div class="logo-container">
             <img src="angelescentinela.jpg" alt="Logo de la empresa">
+            <p><strong>Nit: 43.664.842-0</strong></p>
+            
         </div>
         <h3>Cuenta de Cobro</h3>
 
@@ -230,3 +232,4 @@
     </script>
 </body>
 </html>
+
