--- a/index.html
+++ b/index.html
@@ -148,8 +148,11 @@
     <div class="preview" id="preview">
         <div class="logo-container">
             <img src="angelescentinela.jpg" alt="Logo de la empresa">
-            <p><strong>Nit: 43.664.842-0</strong></p>
-            
+              <p><strong>Nit: 43.664.842-0</strong></p>
+              <p><strong>Dirección: Cll 110 #65-82 - Mde,Antioquia</strong></p>
+              <p><strong>E-mail: coordinacion.angeles.centinela@gmail.com</strong></p>
+              <p><strong>Cel: 321 218 5787</strong></p>
+              
         </div>
         <h3>Cuenta de Cobro</h3>
 
@@ -165,7 +168,7 @@
         <div class="total-container">
             <p><strong>Total a Pagar:</strong> <span id="prev_total"></span></p>
         </div>
-
+        <p><img src="firmac.png" alt="firma" width="190"></p>
         <div class="payment-info">
             <div class="column">
                 <p><strong>Forma de pago:</strong> Contado</p>
@@ -177,11 +180,11 @@
             </div>
             <div class="column">
                 <p><img src="qr.jpg" alt="qr" width="80"></p>
-                <p><strong>BOLD CF-Depósito electrónico:</strong> No. 1700-1862-8915</p>
+                <p><strong>Bold CF-Depósito electrónico:</strong> No. 1700-1862-8915</p>
                 <p><strong>Titular:</strong> Claudia Alejandra Gutiérrez Restrepo</p>
                 <p><strong>C.C:</strong> 43664842</p>
             </div>
-            <center> <p><strong>En caso de requerir un servicio, información o asesoría, por favor comunicarse a la línea de WhatsApp: 321 218 5787</strong></p></center>
+           <center> <p><strong>En caso de requerir un servicio, información o asesoría, por favor comunicarse a la línea de WhatsApp: 321 218 5787</strong></p></center>
         </div>
 
         <button onclick="imprimirCuenta()">Imprimir</button>
@@ -232,4 +235,3 @@
     </script>
 </body>
 </html>
-
